--- a/responsive-car-website-3-main/index.html
+++ b/responsive-car-website-3-main/index.html
@@ -47,6 +47,12 @@
                <li>
                   <a href="#contact" class="nav__link">Contact</a>
                </li>
+
+               <li>
+                  <a href="#" class="nav__link nav__logout" onclick="logOut()">
+                     <i class="ri-logout-box-line"></i> Logout
+                  </a>
+               </li>
             </ul>
 
             <!-- Close button -->
@@ -373,6 +379,7 @@
 
    <!--=============== MAIN JS ===============-->
    <script src="assets/js/main.js"></script>
+   <script src="assets/js/auth.js"></script>
 </body>
 
 </html>
